[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/EventUI.gd" type="Script" id=1]
[ext_resource path="res://ui/ChoicesContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/dialogs/DialogBox.tscn" type="PackedScene" id=3]

[node name="EventUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChoicesContainer" parent="Panel" instance=ExtResource( 2 )]
anchor_top = 0.432
anchor_right = 1.009
margin_left = 50.0
margin_top = -0.200012
margin_right = -50.0
margin_bottom = -10.0

[node name="DialogBox" parent="Panel" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
[connection signal="visibility_changed" from="." to="." method="_on_EventUI_visibility_changed"]
